# ros2_fire

./: README.md
fire_detection_ros2/launch/: fire_detection.launch.py
install/: local_setup.sh  setup.sh
install/fire_detection_ros2/lib/fire_detection_ros2/: webcam_fire
install/fire_detection_ros2/share/fire_detection_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/fire_detection_ros2/: package.xml  setup.cfg  setup.py
src/fire_detection_ros2/fire_detection_ros2/: image_processing.py  model_config.py
src/fire_detection_ros2/launch/: fire_detection.launch.py
